--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1"
   }
 }
