--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "helmet": "^5.0.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
