--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
+    "redis": "^4.0.6",
     "socket.io": "^4.4.1"
   }
 }
